# ShiftAndConnect

./: LICENSE  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/.sqlx/: query-283d03e092c69b8e1499541e4611552c9d050cfd0eed3c9eaef52863e381a727.json  query-3c118b990cc37dc06a253cd8b880ebe2ecd1d3d85c500fcd344eb64aff369a16.json  query-471d20686f6d54a7da6fef8af5380aebcbda1ba37ef8f185152bc16e79786aa5.json  query-712b16a35b414ef07dd9c6ccc2c908bae6cb436c51ef680c0f79fb49d09c656e.json  query-77a1efbaf980cff9b42fba6403e56f05f6a23284b348875f468fb959868e8173.json  query-9b5f572bc3220e9afd11cd781282e3bd7a7229f3caa1aae4a320aa3b9c4b61c7.json  query-9ed7e9a70b9fbb5b27e0f8de77037ecfbb93844078ab32a712cd6b0a17e3c111.json  query-b781ae0b6b63c2d9b6a9867fb522fd861dc5c268196fb699bf4f5aaf545bb22c.json
backend/migrations/: 20260513073355_create_games_table.sql  20260513080836_create_session_lobby_table.sql  20260513081347_create_activity_table.sql
backend/src/: main.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: GameBoard.vue  Lobby.vue
frontend/src/router/: index.ts
